[project]
name = "coryn"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
src = ["coryn"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001", # copyright above code
    "ANN101", # self annotations
    "ANN102", # cls annotations
    "D",      # sphinx not support 
    ]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # assert in tests
    ]

[tool.pyright]
include = ["coryn","tests"]
pythonVersion = "3.10"
pythonPlatform = "all"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

[tool.poetry]
name = "coryn"
version = "0.1.0"
description = "Lightweight Coryn.club Asynchronous Scraper"
authors = ["zawsq <1SilentWraith@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.9.3"
cssselect = "1.2.0"
lxml = "5.2.2"
pydantic = "2.3.4"

[tool.poetry.group.dev.dependencies]
pyright = "1.1.376"
ruff = "0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
